--- a/src/stylesheets/tipsy.css
+++ b/src/stylesheets/tipsy.css
@@ -1,25 +1,40 @@
-.tipsy { font-size: 10px; position: absolute; padding: 5px; z-index: 100000; }
-  .tipsy-inner { background-color: #000; color: #FFF; max-width: 200px; padding: 5px 8px 4px 8px; text-align: center; }
+ul.no-bullets { padding: 0; list-style: none; }
+ul.no-bullets li { padding: 0; list-style: none; }
+ul.no-bullets li:before { content: none; }
 
-  /* Rounded corners */
-  .tipsy-inner { border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
-  
-  /* Uncomment for shadow */
-  /*.tipsy-inner { box-shadow: 0 0 5px #000000; -webkit-box-shadow: 0 0 5px #000000; -moz-box-shadow: 0 0 5px #000000; }*/
-  
-  .tipsy-arrow { position: absolute; width: 0; height: 0; line-height: 0; border: 5px dashed #000; }
-  
-  /* Rules to colour arrows */
-  .tipsy-arrow-n { border-bottom-color: #000; }
-  .tipsy-arrow-s { border-top-color: #000; }
-  .tipsy-arrow-e { border-left-color: #000; }
-  .tipsy-arrow-w { border-right-color: #000; }
-  
-	.tipsy-n .tipsy-arrow { top: 0px; left: 50%; margin-left: -5px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent; }
-    .tipsy-nw .tipsy-arrow { top: 0; left: 10px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent;}
-    .tipsy-ne .tipsy-arrow { top: 0; right: 10px; border-bottom-style: solid; border-top: none;  border-left-color: transparent; border-right-color: transparent;}
-  .tipsy-s .tipsy-arrow { bottom: 0; left: 50%; margin-left: -5px; border-top-style: solid; border-bottom: none;  border-left-color: transparent; border-right-color: transparent; }
-    .tipsy-sw .tipsy-arrow { bottom: 0; left: 10px; border-top-style: solid; border-bottom: none;  border-left-color: transparent; border-right-color: transparent; }
-    .tipsy-se .tipsy-arrow { bottom: 0; right: 10px; border-top-style: solid; border-bottom: none; border-left-color: transparent; border-right-color: transparent; }
-  .tipsy-e .tipsy-arrow { right: 0; top: 50%; margin-top: -5px; border-left-style: solid; border-right: none; border-top-color: transparent; border-bottom-color: transparent; }
-  .tipsy-w .tipsy-arrow { left: 0; top: 50%; margin-top: -5px; border-right-style: solid; border-left: none; border-top-color: transparent; border-bottom-color: transparent; }
+.tipsy { font-size: 11px; line-height: 1.5; position: absolute; padding: 5px; z-index: 100000; text-shadow: none; }
+.tipsy.animate .tipsy-animate { opacity: 1; }
+
+.animate.tipsy-n .tipsy-animate, .animate.tipsy-nw .tipsy-animate, .animate.tipsy-ne .tipsy-animate { margin-top: -6px; }
+.animate.tipsy-s .tipsy-animate, .animate.tipsy-sw .tipsy-animate, .animate.tipsy-se .tipsy-animate { margin-top: 6px; }
+.animate.tipsy-e .tipsy-animate { margin-left: 6px; }
+.animate.tipsy-w .tipsy-animate { margin-left: -6px; }
+
+.tipsy-animate { position: relative; opacity: 0; margin: 0; -webkit-transition: margin 300ms ease, opacity 300ms ease; -moz-transition: margin 300ms ease, opacity 300ms ease; -o-transition: margin 300ms ease, opacity 300ms ease; transition: margin 300ms ease, opacity 300ms ease; }
+
+.tipsy-inner { background-color: rgba(0, 0, 0, 0.8); color: #FFF; max-width: 200px; padding: 4px 8px 5px; text-align: center; }
+
+/* Rounded corners */
+.tipsy-inner { -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; }
+
+/* Uncomment for shadow */
+/*.tipsy-inner { box-shadow: 0 0 5px #000000; -webkit-box-shadow: 0 0 5px #000000; -moz-box-shadow: 0 0 5px #000000; }*/
+.tipsy-arrow { position: absolute; width: 0; height: 0; line-height: 0; border: 5px dashed black; }
+
+/* Rules to colour arrows */
+.tipsy-arrow-n { border-bottom-color: rgba(0, 0, 0, 0.8); }
+
+.tipsy-arrow-s { border-top-color: rgba(0, 0, 0, 0.8); }
+
+.tipsy-arrow-e { border-left-color: rgba(0, 0, 0, 0.8); }
+
+.tipsy-arrow-w { border-right-color: rgba(0, 0, 0, 0.8); }
+
+.tipsy-n .tipsy-arrow { top: -5px; left: 50%; margin-left: -5px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent; }
+.tipsy-nw .tipsy-arrow { top: -5px; left: 10px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent; }
+.tipsy-ne .tipsy-arrow { top: -5px; right: 10px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent; }
+.tipsy-s .tipsy-arrow { bottom: -5px; left: 50%; margin-left: -5px; border-top-style: solid; border-bottom: none; border-left-color: transparent; border-right-color: transparent; }
+.tipsy-sw .tipsy-arrow { bottom: -5px; left: 10px; border-top-style: solid; border-bottom: none; border-left-color: transparent; border-right-color: transparent; }
+.tipsy-se .tipsy-arrow { bottom: -5px; right: 10px; border-top-style: solid; border-bottom: none; border-left-color: transparent; border-right-color: transparent; }
+.tipsy-e .tipsy-arrow { right: -5px; top: 50%; margin-top: -5px; border-left-style: solid; border-right: none; border-top-color: transparent; border-bottom-color: transparent; }
+.tipsy-w .tipsy-arrow { left: -5px; top: 50%; margin-top: -5px; border-right-style: solid; border-left: none; border-top-color: transparent; border-bottom-color: transparent; }
